@@ -1,4 +1,4 @@
-// src/main/java/com/sttweb/sttweb/service/IniFileService.java
+// src/main/java/com/sttweb/sttweb/service/RecordTelService.java
 package com.sttweb.sttweb.service;
 
 import com.sttweb.sttweb.dto.IniNameExtDto;
@@ -10,23 +10,22 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.io.*;
 import java.nio.charset.Charset;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-public class IniFileService {
+public class RecordTelService {
 
   private final TrecordTelListRepository repository;
 
-  // Windows 환경에서 순차 탐색할 드라이브 목록
+  // 순차 탐색할 드라이브 목록 (Windows)
   private static final String[] DRIVES = { "C:", "D:", "E:" };
   private static final String SUB_PATH = "\\RecOnData\\RecOnLineInfo.ini";
 
   /**
-   * 1) 드라이브(C:,D:,E:)를 순차 탐색해서
-   *    RecOnLineInfo.ini 파일을 찾으면 File을 반환. 없으면 null 반환
+   * 1) C:, D:, E: 드라이브 순으로
+   *    RecOnLineInfo.ini 파일을 찾아 반환 (없으면 null)
    */
   public File findIniFile() {
     for (String drive : DRIVES) {
@@ -40,10 +39,14 @@ public class IniFileService {
   }
 
   /**
-   * 2) INI 파일을 ANSI(MS949)로 읽어서 "[RECORD_TELLIST]" 섹션 이후 줄을 파싱
-   *    callNum, userName만 RecordTelDto에 담아 반환
+   * 2) INI 파일에서 "[RECORD_TELLIST]" 섹션 이후의 줄을 읽어서
+   *    각 항목(index=... 형태)에서 callNum, userName만 추출하여
+   *    (임시로) DTO 리스트를 만듭니다.
    *
-   * @return 파싱된 RecordTelDto 목록 (INI 파일이 없으면 빈 리스트)
+   *    - id, critime은 이 단계에선 알 수 없으므로 null로 둡니다.
+   *    - 인코딩이 ANSI(MS949)인 경우에도 한글이 깨지지 않도록 Charset.forName("MS949")로 읽습니다.
+   *
+   * @return 파싱된 DTO 목록 (INI 파일이 없으면 빈 리스트)
    * @throws IOException 파일 읽기/파싱 중 예외 발생 시
    */
   public List<IniNameExtDto> parseIniNameExt() throws IOException {
@@ -54,7 +57,6 @@ public class IniFileService {
       return result;
     }
 
-    // MS949 인코딩으로 읽기 (한글 깨짐 방지)
     try (BufferedReader reader = new BufferedReader(
         new InputStreamReader(new FileInputStream(iniFile), Charset.forName("MS949"))
     )) {
@@ -65,7 +67,7 @@ public class IniFileService {
         line = line.trim();
         if (line.isEmpty()) continue;
 
-        // "[RECORD_TELLIST]" 섹션 나오기 전에는 무시
+        // "[RECORD_TELLIST]" 섹션을 만날 때까지 스킵
         if (!inSection) {
           if (line.startsWith("[RECORD_TELLIST]")) {
             inSection = true;
@@ -73,27 +75,29 @@ public class IniFileService {
           continue;
         }
 
-        // 섹션 내부에서는 "COUNT=" 줄 스킵
+        // 섹션 내부: "COUNT=" 줄 스킵
         if (line.startsWith("COUNT")) {
           continue;
         }
 
-        // "index=..." 형태인 줄만 파싱
+        // "index=..." 형태 줄만 파싱
         if (line.contains("=")) {
           String[] parts = line.split("=", 2);
           String idx = parts[0].trim();
           String data = parts[1].trim();
 
           if (isNumeric(idx)) {
-            // data 예: "202;N;202;서인석;3;X;N;13688;"
+            // ex: "202;N;202;서인석;3;X;N;13688;"
             String[] tokens = data.split(";");
             if (tokens.length >= 4) {
               String callNum = tokens[0];
               String userName = tokens[3];
-              // id, critime은 파싱 단계에는 알 수 없으므로 null
+              // id, critime은 파싱 단계에 알 수 없으므로 null
               result.add(IniNameExtDto.builder()
+                  .id(null)
                   .callNum(callNum)
                   .userName(userName)
+                  .critime(null)
                   .build()
               );
             }
@@ -106,12 +110,12 @@ public class IniFileService {
   }
 
   /**
-   * 3) 파싱된 RecordTelDto 목록을 DB에 저장 (중복 검사 → INSERT)
-   *    → 기존 DB에 없는 callNum만 저장
-   *    → 저장된 엔티티를 RecordTelDto로 변환하여 리스트로 반환
+   * 3) parseIniNameExt()로 파싱한 결과를 순회하면서,
+   *    DB(trecord_tel_list)에 “중복 검사(callNum)” → “신규 INSERT” 를 수행합니다.
+   *    이때, 엔티티를 저장하면 자동으로 critime이 채워집니다.
    *
-   * @return 새로 삽입된 레코드를 담은 List<RecordTelDto>
-   * @throws IOException 파싱 중 예외 발생 시
+   * @return 실제 INSERT된 레코드의 DTO 리스트
+   * @throws IOException 파일 읽기/파싱 중 예외 발생 시
    */
   @Transactional
   public List<IniNameExtDto> syncFromIni() throws IOException {
@@ -122,43 +126,42 @@ public class IniFileService {
       String callNum = dto.getCallNum();
       String userName = dto.getUserName();
 
+      // 이미중복 검사
       Optional<TrecordTelListEntity> existing = repository.findByCallNum(callNum);
       if (existing.isEmpty()) {
-        // 새 엔티티 생성
         TrecordTelListEntity entity = TrecordTelListEntity.builder()
             .callNum(callNum)
             .userName(userName)
-            // critime은 @CreationTimestamp 덕분에 Hibernate가 자동으로 채워줌
             .build();
         TrecordTelListEntity saved = repository.save(entity);
 
-        // 저장된 엔티티를 DTO로 변환하여 리스트에 추가
-        IniNameExtDto savedDto = IniNameExtDto.builder()
+        // 방금 저장된 엔티티의 id, critime까지 포함하여 DTO 생성
+        insertedDtos.add(IniNameExtDto.builder()
             .id(saved.getId())
             .callNum(saved.getCallNum())
             .userName(saved.getUserName())
             .critime(saved.getCritime())
-            .build();
-        insertedDtos.add(savedDto);
+            .build()
+        );
       }
     }
     return insertedDtos;
   }
 
   /**
-   * 4) trecord_tel_list 테이블의 모든 행을 조회하여
-   *    RecordTelDto(id, callNum, userName, critime) 리스트 반환
+   * 4) trecord_tel_list 테이블의 모든 행을 조회한 뒤
+   *    각각의 엔티티를 DTO로 변환하여 List<DTO>로 반환합니다.
    */
   @Transactional(readOnly = true)
   public List<IniNameExtDto> getAll() {
-    return repository.findAll()
-        .stream()
+    return repository.findAll().stream()
         .map(this::entityToDto)
-        .toList();
+        .collect(Collectors.toList());
   }
 
   /**
-   * 5) callNum(내선번호)로 단일 조회 → RecordTelDto 반환 (없으면 null)
+   * 5) callNum 기준으로 단일 조회 후 엔티티 → DTO 변환
+   *    없으면 null 반환
    */
   @Transactional(readOnly = true)
   public IniNameExtDto getByCallNum(String callNum) {
@@ -167,7 +170,7 @@ public class IniFileService {
         .orElse(null);
   }
 
-  /** 엔티티 → DTO 변환 헬퍼 */
+  // 엔티티 → DTO 헬퍼
   private IniNameExtDto entityToDto(TrecordTelListEntity e) {
     return IniNameExtDto.builder()
         .id(e.getId())
@@ -177,7 +180,7 @@ public class IniFileService {
         .build();
   }
 
-  /** 문자열이 숫자만으로 이루어졌는지 확인하는 헬퍼 */
+  // 숫자 여부 확인 헬퍼
   private boolean isNumeric(String s) {
     if (s == null || s.isEmpty()) return false;
     for (char c : s.toCharArray()) {
